wikijs_sitemap.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-sitemap
  namespace: __NS__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs-sitemap
  template:
    metadata:
      labels:
        app: wikijs-sitemap
    spec:
      containers:
        - name: server
          image: python:3-alpine
          command: ["python3", "-m", "http.server", "8080"]
          volumeMounts:
            - name: sitemap
              mountPath: /data
          workingDir: /data
          ports:
            - containerPort: 8080
      volumes:
        - name: sitemap
          persistentVolumeClaim:
            claimName: wikijs-sitemap-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-sitemap
  namespace: __NS__
spec:
  selector:
    app: wikijs-sitemap
  ports:
    - port: 80
      targetPort: 8080
