wikijs.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: __NS__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: ghcr.io/requarks/wiki:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: __NS__
spec:
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: __NS__
spec:
  rules:
  - host: __FQDN__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
