wikijs_sitemap_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: __NS__
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik

  rules:
  - host: __FQDN__
    http:
      paths:
      - path: /sitemap.xml
        pathType: Exact
        backend:
          service:
            name: wikijs-sitemap
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
